# walking_robot

walking_robot_brain/: Cargo.toml
walking_robot_brain/.cargo/: Config.toml
walking_robot_brain/models/: a_selector.mpk  rs_estimator.mpk  v_estimator.mpk
walking_robot_brain/src/: comm.rs  lib.rs  loss.rs  main.rs  state_action_tree.rs  tensor_conversion.rs  tools.rs  traits.rs
walking_robot_brain/src/models/: a_selector.rs  builders.rs  mod.rs  q_estimator.rs  rs_estimator.rs  sa_endec.rs  v_estimator.rs
walking_robot_brain/src/modules/: forward_module.rs  mod.rs  sequential.rs
walking_robot_brain/src/procedures/: mod.rs  run_simulation.rs  sa_tree_expansion.rs
walking_robot_brain/src/procedures/train/: a_selector_from_history.rs  a_selector_from_tree_exp.rs  a_selector_train.rs  execute_training.rs  mod.rs  q_estimator_monte_carlo.rs  rs_estimator_train.rs  s_endec_train.rs  v_estimator_monte_carlo.rs  v_estimator_single_value.rs  v_estimator_td.rs
walking_robot_brain/src/types/: action.rs  history.rs  mod.rs  sa_tensor_tree.rs  state.rs  tensor_types.rs
walking_robot_brain/src/types/policy/: mod.rs  nil_policy.rs  noisy_policy.rs  q_estimator_policy.rs  tree_policy.rs
walking_robot_simulation/: Assembly-CSharp.Player.csproj  Assembly-CSharp.csproj  Unity.CollabProxy.Editor.csproj  Unity.EditorCoroutines.Editor.csproj  Unity.InputSystem.DocCodeSamples.csproj  Unity.InputSystem.ForUI.Player.csproj  Unity.InputSystem.ForUI.csproj  Unity.InputSystem.Player.csproj  Unity.InputSystem.TestFramework.Player.csproj  Unity.InputSystem.TestFramework.csproj  Unity.InputSystem.csproj  Unity.Multiplayer.Center.Common.Player.csproj  Unity.Multiplayer.Center.Common.csproj  Unity.PlasticSCM.Editor.csproj  (+33 more)
(+35 files in other folders)
