[package]
name = "walking_robot_brain"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
burn = {version = "0.16.0", features = ["train", "dataset", "wgpu", "vision" ]}
either = "1.14.0"
fix_float = "0.1.4"
itertools = "0.14.0"
json = "0.12.4"
nalgebra = "0.33.2"
pretty_env_logger = "0.5.0"
rand = "0.9.0"
rayon = "1.10.0"
serde = { version = "1.0.218", features = ["derive"] }
sorted-list = "0.2.0"
tokio = { version = "1.43.0", features = ["full", "tracing"] }
tracing = { version = "0.1.41", features = ["log"] }

[profile.dev]
opt-level = 1


[profile.release.package."burn"]
opt-level = 3

[profile.dev.package."burn"]
opt-level = 3
